--- a/conf/nifi.properties
+++ b/conf/nifi.properties
@@ -140,7 +140,7 @@ nifi.asset.manager.properties.directory=./assets
 
 # Site to Site properties
 nifi.remote.input.host=
-nifi.remote.input.secure=true
+nifi.remote.input.secure=false
 nifi.remote.input.socket.port=
 nifi.remote.input.http.enabled=true
 nifi.remote.input.http.transaction.ttl=30 sec
@@ -154,20 +154,21 @@ nifi.remote.contents.cache.expiration=30 secs
 # We recommend configuring HTTPS instead. The administrators guide provides instructions on how to do this.
 
 nifi.web.http.host=
-nifi.web.http.port=
+nifi.web.http.port=__PORT__
 nifi.web.http.network.interface.default=
 
 #############################################
 
-nifi.web.https.host=localhost
-nifi.web.https.port=__PORT__
+nifi.web.https.host=
+nifi.web.https.port=
 nifi.web.https.network.interface.default=
 nifi.web.https.application.protocols=h2 http/1.1
+
 nifi.web.jetty.working.directory=./work/jetty
 nifi.web.jetty.threads=200
-nifi.web.max.header.size=16 KB
+nifi.web.proxy.host=__DOMAIN__
 nifi.web.proxy.context.path=__PATH__
-nifi.web.proxy.host=localhost
+nifi.web.max.header.size=16 KB
 nifi.web.max.content.size=
 nifi.web.max.requests.per.second=30000
 nifi.web.max.access.token.requests.per.second=25
