--- a/conf/nifi.properties
+++ b/conf/nifi.properties
@@ -190,20 +190,20 @@ nifi.sensitive.props.algorithm=NIFI_PBKDF2_AES_GCM_256
 
 nifi.security.autoreload.enabled=false
 nifi.security.autoreload.interval=10 secs
-nifi.security.keystore=./conf/keystore.p12
+nifi.security.keystore=
 nifi.security.keystore.certificate=
 nifi.security.keystore.privateKey=
-nifi.security.keystoreType=PKCS12
+nifi.security.keystoreType=
 nifi.security.keystorePasswd=
 nifi.security.keyPasswd=
-nifi.security.truststore=./conf/truststore.p12
+nifi.security.truststore=
 nifi.security.truststore.certificate=
-nifi.security.truststoreType=PKCS12
+nifi.security.truststoreType=
 nifi.security.truststorePasswd=
 
-nifi.security.user.authorizer=ldap-user-group-provider
+nifi.security.user.authorizer=single-user-authorizer
 nifi.security.allow.anonymous.authentication=false
-nifi.security.user.login.identity.provider=ldap-provider
+nifi.security.user.login.identity.provider=single-user-provider
 nifi.security.user.jws.key.rotation.period=PT1H
 
 # OpenId Connect SSO Properties #
