essai avec le server LDAP

--- a/conf/nifi.properties
+++ b/conf/nifi.properties
@@ -201,9 +201,9 @@ nifi.security.truststore.certificate=
 nifi.security.truststoreType=
 nifi.security.truststorePasswd=
 
-nifi.security.user.authorizer=single-user-authorizer
+nifi.security.user.authorizer=
 nifi.security.allow.anonymous.authentication=false
-nifi.security.user.login.identity.provider=single-user-provider
+nifi.security.user.login.identity.provider=ldap-provider
 nifi.security.user.jws.key.rotation.period=PT1H
 
 # OpenId Connect SSO Properties #
