essai avec l'authorizer

--- a/conf/nifi.properties
+++ b/conf/nifi.properties
@@ -201,7 +201,7 @@ nifi.security.truststore.certificate=
 nifi.security.truststoreType=
 nifi.security.truststorePasswd=
 
-nifi.security.user.authorizer=
+nifi.security.user.authorizer=file-authorizer
 nifi.security.allow.anonymous.authentication=false
 nifi.security.user.login.identity.provider=ldap-provider
 nifi.security.user.jws.key.rotation.period=PT1H
