--- a/conf/systemd.service
+++ b/conf/systemd.service
@@ -8,8 +8,8 @@ Type=forking
 User=__APP__
 Group=__APP__
 WorkingDirectory=__INSTALL_DIR__
-ExecStart=__INSTALL_DIR__/bin/nifi.sh start
-ExecStop=__INSTALL_DIR__/bin/nifi.sh stop
+ExecStart=./bin/nifi.sh start
+ExecStop=./bin/nifi.sh stop
 SyslogIdentifier=__APP__
 SuccessExitStatus=143
 TimeoutStopSec=120
