elimination des authproviders

--- a/conf/nifi.properties
+++ b/conf/nifi.properties
@@ -202,37 +202,37 @@ nifi.security.truststoreType=
 nifi.security.truststorePasswd=
 
 nifi.security.user.authorizer=managed-authorizer
-nifi.security.allow.anonymous.authentication=false
+# nifi.security.allow.anonymous.authentication=false
 nifi.security.user.login.identity.provider=ldap-provider
 nifi.security.user.jws.key.rotation.period=PT1H
 
 # OpenId Connect SSO Properties #
-nifi.security.user.oidc.discovery.url=
-nifi.security.user.oidc.connect.timeout=5 secs
-nifi.security.user.oidc.read.timeout=5 secs
-nifi.security.user.oidc.client.id=
-nifi.security.user.oidc.client.secret=
-nifi.security.user.oidc.preferred.jwsalgorithm=
-nifi.security.user.oidc.additional.scopes=offline_access
-nifi.security.user.oidc.claim.identifying.user=
-nifi.security.user.oidc.fallback.claims.identifying.user=
-nifi.security.user.oidc.claim.groups=groups
-nifi.security.user.oidc.truststore.strategy=JDK
-nifi.security.user.oidc.token.refresh.window=60 secs
+# nifi.security.user.oidc.discovery.url=
+# nifi.security.user.oidc.connect.timeout=5 secs
+# nifi.security.user.oidc.read.timeout=5 secs
+# nifi.security.user.oidc.client.id=
+# nifi.security.user.oidc.client.secret=
+# nifi.security.user.oidc.preferred.jwsalgorithm=
+# nifi.security.user.oidc.additional.scopes=offline_access
+# nifi.security.user.oidc.claim.identifying.user=
+# nifi.security.user.oidc.fallback.claims.identifying.user=
+# nifi.security.user.oidc.claim.groups=groups
+# nifi.security.user.oidc.truststore.strategy=JDK
+# nifi.security.user.oidc.token.refresh.window=60 secs
 
 # SAML Properties #
-nifi.security.user.saml.idp.metadata.url=
-nifi.security.user.saml.sp.entity.id=
-nifi.security.user.saml.identity.attribute.name=
-nifi.security.user.saml.group.attribute.name=
-nifi.security.user.saml.request.signing.enabled=false
-nifi.security.user.saml.want.assertions.signed=true
-nifi.security.user.saml.signature.algorithm=http://www.w3.org/2001/04/xmldsig-more#rsa-sha256
-nifi.security.user.saml.authentication.expiration=12 hours
-nifi.security.user.saml.single.logout.enabled=false
-nifi.security.user.saml.http.client.truststore.strategy=JDK
-nifi.security.user.saml.http.client.connect.timeout=30 secs
-nifi.security.user.saml.http.client.read.timeout=30 secs
+# nifi.security.user.saml.idp.metadata.url=
+# nifi.security.user.saml.sp.entity.id=
+# nifi.security.user.saml.identity.attribute.name=
+# nifi.security.user.saml.group.attribute.name=
+# nifi.security.user.saml.request.signing.enabled=false
+# nifi.security.user.saml.want.assertions.signed=true
+# nifi.security.user.saml.signature.algorithm=http://www.w3.org/2001/04/xmldsig-more#rsa-sha256
+# nifi.security.user.saml.authentication.expiration=12 hours
+# nifi.security.user.saml.single.logout.enabled=false
+# nifi.security.user.saml.http.client.truststore.strategy=JDK
+# nifi.security.user.saml.http.client.connect.timeout=30 secs
+# nifi.security.user.saml.http.client.read.timeout=30 secs
 
 # Identity Mapping Properties #
 # These properties allow normalizing user identities such that identities coming from different identity providers
