--- a/conf/nifi.properties
+++ b/conf/nifi.properties
@@ -140,7 +140,7 @@ nifi.asset.manager.properties.directory=./assets
 
 # Site to Site properties
 nifi.remote.input.host=
-nifi.remote.input.secure=false
+nifi.remote.input.secure=true
 nifi.remote.input.socket.port=
 nifi.remote.input.http.enabled=true
 nifi.remote.input.http.transaction.ttl=30 sec
@@ -154,13 +154,13 @@ nifi.remote.contents.cache.expiration=30 secs
 # We recommend configuring HTTPS instead. The administrators guide provides instructions on how to do this.
 
 nifi.web.http.host=
-nifi.web.http.port=__PORT__
+nifi.web.http.port=
 nifi.web.http.network.interface.default=
 
 #############################################
 
 nifi.web.https.host=
-nifi.web.https.port=
+nifi.web.https.port=__PORT__
 nifi.web.https.network.interface.default=
 nifi.web.https.application.protocols=h2 http/1.1
 
@@ -201,9 +201,9 @@ nifi.security.truststore.certificate=
 nifi.security.truststoreType=
 nifi.security.truststorePasswd=
 
-nifi.security.user.authorizer=managed-authorizer
-# nifi.security.allow.anonymous.authentication=false
-nifi.security.user.login.identity.provider=ldap-provider
+nifi.security.user.authorizer=single-user-authorizer
+#nifi.security.allow.anonymous.authentication=false
+nifi.security.user.login.identity.provider=single-user-provider
 nifi.security.user.jws.key.rotation.period=PT1H
 
 # OpenId Connect SSO Properties #
