ajout du keystore

--- a/conf/nifi.properties
+++ b/conf/nifi.properties
@@ -190,12 +190,12 @@ nifi.sensitive.props.algorithm=NIFI_PBKDF2_AES_GCM_256
 
 nifi.security.autoreload.enabled=false
 nifi.security.autoreload.interval=10 secs
-nifi.security.keystore=
+nifi.security.keystore=conf/keystore.jks
 nifi.security.keystore.certificate=
 nifi.security.keystore.privateKey=
-nifi.security.keystoreType=
-nifi.security.keystorePasswd=
-nifi.security.keyPasswd=
+nifi.security.keystoreType=JKS
+nifi.security.keystorePasswd=$keystorepasswd
+nifi.security.keyPasswd=$keystorepasswd
 nifi.security.truststore=
 nifi.security.truststore.certificate=
 nifi.security.truststoreType=
