correction du script d'instalaltion

--- a/conf/nifi.properties
+++ b/conf/nifi.properties
@@ -194,8 +194,8 @@ nifi.security.keystore=conf/keystore.jks
 nifi.security.keystore.certificate=
 nifi.security.keystore.privateKey=
 nifi.security.keystoreType=JKS
-nifi.security.keystorePasswd=$keystorepasswd
-nifi.security.keyPasswd=$keystorepasswd
+nifi.security.keystorePasswd=__KEYSTOREPASSWD__
+nifi.security.keyPasswd=__KEYSTOREPASSWD__
 nifi.security.truststore=
 nifi.security.truststore.certificate=
 nifi.security.truststoreType=
