essai des porpriété

--- a/conf/nifi.properties
+++ b/conf/nifi.properties
@@ -167,7 +167,7 @@ nifi.web.https.application.protocols=h2 http/1.1
 nifi.web.jetty.working.directory=./work/jetty
 nifi.web.jetty.threads=200
 nifi.web.proxy.host=__DOMAIN__
-#nifi.web.proxy.context.path=__PATH__
+nifi.web.proxy.context.path=__PATH__/
 nifi.web.max.header.size=16 KB
 nifi.web.max.content.size=
 nifi.web.max.requests.per.second=30000
@@ -191,8 +191,8 @@ nifi.sensitive.props.algorithm=NIFI_PBKDF2_AES_GCM_256
 nifi.security.autoreload.enabled=false
 nifi.security.autoreload.interval=10 secs
 nifi.security.keystore=conf/keystore.jks
-nifi.security.keystore.certificate=
-nifi.security.keystore.privateKey=
+nifi.security.keystore.certificate=/etc/yunohost/certs/__DOMAIN__/crt.pem
+nifi.security.keystore.privateKey=/etc/yunohost/certs/__DOMAIN__/key.pem
 nifi.security.keystoreType=JKS
 nifi.security.keystorePasswd=__KEYSTOREPASSWD__
 nifi.security.keyPasswd=__KEYSTOREPASSWD__
