--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -6,10 +6,11 @@ location __PATH__/ {
     proxy_set_header  X-Forwarded-Proto $scheme;
     proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
 
-    #WebSocket Support
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection $http_connection;
+
+    proxy_set_header X-ProxyScheme $scheme;
+    proxy_set_header X-ProxyHost $hostname;
+    proxy_set_header X-ProxyPort $server_port;
+    proxy_set_header X-ProxyContextPath __PATH__/;
 
     # Include SSOWAT user panel.
     include conf.d/yunohost_panel.conf.inc;
