nouvelle acton en https

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -8,7 +8,7 @@ location __PATH__/ {
 
 
     proxy_set_header X-ProxyScheme $scheme;
-    proxy_set_header X-ProxyHost $hostname;
+    proxy_set_header X-ProxyHost __DOMAIN__;
     proxy_set_header X-ProxyPort $server_port;
     proxy_set_header X-ProxyContextPath __PATH__/;
 
