--- a/conf/nifi.properties
+++ b/conf/nifi.properties
@@ -142,7 +142,7 @@ nifi.asset.manager.properties.directory=./assets
 nifi.remote.input.host=
 nifi.remote.input.secure=true
 nifi.remote.input.socket.port=
-nifi.remote.input.http.enabled=true
+nifi.remote.input.http.enabled=false
 nifi.remote.input.http.transaction.ttl=30 sec
 nifi.remote.contents.cache.expiration=30 secs
 
