essai du panneau de configuration

--- a/scripts/config
+++ b/scripts/config
@@ -1,6 +1,17 @@
 #!/bin/bash
 
 #=================================================
+# BUTTON ACTION
+#=================================================
+run__install_keystore() {
+    if [ -f "$install_dir/conf/keystore.jks" ]; then
+        rm $install_dir/conf/keystore.jks
+    fi
+
+    keytool -genkeypair -alias nifi -keyalg RSA -keystore $install_dir/conf/keystore.jks -storepass $keystorepasswd -keypass $keystorepasswd -validity 365 -keysize 2048 -dname "CN=$domain,OU=users"
+}
+
+#=================================================
 # IMPORT GENERIC HELPERS
 #=================================================
 source /usr/share/yunohost/helpers
