essai du stockage des clés dan nifi

--- a/scripts/config
+++ b/scripts/config
@@ -4,11 +4,19 @@
 # BUTTON ACTION
 #=================================================
 run__install_keystore() {
+    install_dir=$(ynh_app_setting_get --key=install_dir)
+    
+    # Vérifie si le fichier keystore.jks existe dans le répertoire de configuration
     if [ -f "$install_dir/conf/keystore.jks" ]; then
+        # Si le fichier existe, le supprime
         rm $install_dir/conf/keystore.jks
     fi
 
-    keytool -genkeypair -alias nifi -keyalg RSA -keystore $install_dir/conf/keystore.jks -storepass $keystorepasswd -keypass $keystorepasswd -validity 365 -keysize 2048 -dname "CN=$domain,OU=users"
+    # Convertit le certificat Let's Encrypt en format PKCS12
+    openssl pkcs12 -export -in /etc/yunohost/certs/$domain/cert.pem -inkey /etc/yunohost/certs/$domain/key.pem -out $install_dir/conf/nifi-keystore.p12 -name nifi -passout pass:$keystorepasswd
+
+    # Convertit le fichier PKCS12 en keystore JKS
+    keytool -importkeystore -srckeystore $install_dir/conf/nifi-keystore.p12 -srcstoretype PKCS12 -destkeystore $install_dir/conf/keystore.jks -deststoretype JKS -srcstorepass $keystorepasswd -deststorepass $keystorepasswd
 }
 
 #=================================================
@@ -17,13 +25,7 @@ run__install_keystore() {
 source /usr/share/yunohost/helpers
 source _common.sh
 
-ynh_abort_if_errors
-
 #=================================================
 # RETRIEVE ARGUMENTS
 #=================================================
 
-install_dir=$(ynh_app_setting_get --key=install_dir)
-
-#=================================================
-ynh_app_config_run "$1"
