--- a/conf/nifi.properties
+++ b/conf/nifi.properties
@@ -139,9 +139,9 @@ nifi.asset.manager.implementation=org.apache.nifi.asset.StandardAssetManager
 nifi.asset.manager.properties.directory=./assets
 
 # Site to Site properties
-nifi.remote.input.host=
+nifi.remote.input.host=__DOMAIN__
 nifi.remote.input.secure=true
-nifi.remote.input.socket.port=
+nifi.remote.input.socket.port=__PORT_REMOTE_HTTP__
 nifi.remote.input.http.enabled=false
 nifi.remote.input.http.transaction.ttl=30 sec
 nifi.remote.contents.cache.expiration=30 secs
@@ -159,11 +159,10 @@ nifi.web.http.network.interface.default=
 
 #############################################
 
-nifi.web.https.host=
+nifi.web.https.host=__DOMAIN__
 nifi.web.https.port=__PORT__
 nifi.web.https.network.interface.default=
 nifi.web.https.application.protocols=h2 http/1.1
-
 nifi.web.jetty.working.directory=./work/jetty
 nifi.web.jetty.threads=200
 nifi.web.proxy.host=__DOMAIN__
@@ -190,16 +189,16 @@ nifi.sensitive.props.algorithm=NIFI_PBKDF2_AES_GCM_256
 
 nifi.security.autoreload.enabled=false
 nifi.security.autoreload.interval=10 secs
-nifi.security.keystore=conf/keystore.jks
-nifi.security.keystore.certificate=/etc/yunohost/certs/__DOMAIN__/crt.pem
-nifi.security.keystore.privateKey=/etc/yunohost/certs/__DOMAIN__/key.pem
+nifi.security.keystore=./conf/keystore.jks
+nifi.security.keystore.certificate=
+nifi.security.keystore.privateKey=
+nifi.security.keyPasswd=__KEYSTOREPASSWD__
 nifi.security.keystoreType=JKS
 nifi.security.keystorePasswd=__KEYSTOREPASSWD__
-nifi.security.keyPasswd=__KEYSTOREPASSWD__
-nifi.security.truststore=
+nifi.security.truststore=./conf/truststore.jks
 nifi.security.truststore.certificate=
-nifi.security.truststoreType=
-nifi.security.truststorePasswd=
+nifi.security.truststoreType=JKS
+nifi.security.truststorePasswd=__KEYSTOREPASSWD__
 
 nifi.security.user.authorizer=single-user-authorizer
 #nifi.security.allow.anonymous.authentication=false
@@ -304,11 +303,11 @@ nifi.zookeeper.kerberos.removeHostFromPrincipal=
 nifi.zookeeper.kerberos.removeRealmFromPrincipal=
 
 # kerberos #
-nifi.kerberos.krb5.file=
+#nifi.kerberos.krb5.file=
 
 # kerberos service principal #
-nifi.kerberos.service.principal=
-nifi.kerberos.service.keytab.location=
+#nifi.kerberos.service.principal=
+#nifi.kerberos.service.keytab.location=
 
 # analytics properties #
 nifi.analytics.predict.enabled=false
