--- a/conf/nifi.properties
+++ b/conf/nifi.properties
@@ -166,7 +166,7 @@ nifi.web.https.application.protocols=h2 http/1.1
 nifi.web.jetty.working.directory=./work/jetty
 nifi.web.jetty.threads=200
 nifi.web.proxy.host=__DOMAIN__
-nifi.web.proxy.context.path=__PATH__/
+nifi.web.proxy.context.path=/
 nifi.web.max.header.size=16 KB
 nifi.web.max.content.size=
 nifi.web.max.requests.per.second=30000
