--- a/conf/systemd.service
+++ b/conf/systemd.service
@@ -4,11 +4,11 @@ After=syslog.target
 After=network.target
 
 [Service]
-Type=forking
+Type=simple
 User=__APP__
 Group=__APP__
 WorkingDirectory=__INSTALL_DIR__
-ExecStart=__INSTALL_DIR__/bin/nifi.sh start
+ExecStart=__INSTALL_DIR__/bin/nifi.sh run
 ExecStop=__INSTALL_DIR__/bin/nifi.sh stop
 SyslogIdentifier=__APP__
 SuccessExitStatus=143
