Update HTTPS host in nifi.properties

--- a/conf/nifi.properties
+++ b/conf/nifi.properties
@@ -159,7 +159,7 @@ nifi.web.http.network.interface.default=
 
 #############################################
 
-nifi.web.https.host=__DOMAIN__
+nifi.web.https.host=127.0.0.1
 nifi.web.https.port=__PORT__
 nifi.web.https.network.interface.default=
 nifi.web.https.application.protocols=h2 http/1.1
